# rustbin

./: .gitignore  Cargo.toml  Dioxus.toml  docker-compose.yml
migrations/: 001_create_pastes_table.sql
src/: encryption.rs  main.rs
src/components/: home.rs  mod.rs  paste.rs
src/jobs/: cleanup.rs
src/models/: mod.rs
src/routes/: mod.rs
src/server/: mod.rs
