[package]
name = "rustbin"
version = "0.1.0"
authors = ["John Grahn <johngrahn@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
dioxus = { version = "0.5", features = ["fullstack", "router"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.36", features = ["full"], optional = true }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"], optional = true }
getrandom = { version = "0.2", features = ["js"] }
dioxus-logger = "0.5.1"
dotenv = {version = "0.15.0", optional = true}
rand = "0.8.5"

[features]
default = []
server = ["dioxus/axum", "dep:tokio", "dep:sqlx", "dep:dotenv"]
web = ["dioxus/web"]